fixed responsive issues on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1620,7 +1620,7 @@
 		}
 
 	footer {
-		margin: 1em 0 0 0;
+		margin: 2em 0 0 0;
 	}
 
 	strong, b {
@@ -2521,16 +2521,17 @@
 
 #top {
 	height: 100vh;
+	min-height: 500px;
 }
 
 #top > .container {
-	margin-top: 50vh;
+	margin-top: 60vh;
 	width: 100%;
 }
 
 #top > .container > header {
-	width: 900px;
 	margin: 0 auto;
+	max-width: 800px;
 }
 
 #top > .container > footer{
@@ -2542,7 +2543,7 @@
 }
 
 #about > .container > .skills-icons {
-	width: 1000px;
+	max-width: 1000px;
 	margin: auto;
 }
 
@@ -2599,4 +2600,8 @@
 	width: 150px;
 	padding: .5em 1em;
 	margin: 0 1em;
+}
+
+body > #main > #top {
+	padding: 0;
 }
